# pytorch_assignments

./: .gitignore  README.md  requirements.txt
assignment_one/: cus_pow.py
lib/assignment_one/: cus_pow.py  cus_softmax.py  requirements.txt
lib/assignment_one/tests/: test_pow.py  test_softmax.py
lib/assignment_three/: README.md
lib/assignment_three/pybind_c++/: CMakeLists.txt  cus_ops_wrap.cpp  cus_ops_wrap.py  requirements.txt  test_addbmm.py  test_logaddexp.py
lib/assignment_three/src/: CMakeLists.txt  cus_ops.cpp  cus_ops.h
lib/assignment_three/tests/: CMakeLists.txt  test_cusops.cpp
lib/assignment_two/: README.md
lib/assignment_two/pybind_c++/: CMakeLists.txt  cus_min.py  cus_min_wrap.cpp  requirements.txt  test_cus_min.py
lib/assignment_two/src/: CMakeLists.txt  cus_min.cpp  cus_min.h
lib/assignment_two/tests/: CMakeLists.txt  test_min.cpp
tests/: test_pow.py  test_softmax.py
